<resources>
    <string name="app_name" translatable="false">Learn Time</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="tv_statistics_text">Today\'s statistics:</string>
    <string name="tv_intervals_text">Intervals:</string>
    <string name="text_no_intervals">No intervals yet</string>
    <string name="calendar_item_title" translatable="false">Calendar</string>
    <string name="clear_item_title">Clear</string>
    <string name="about_item_title" translatable="false">Info</string>
    <string name="settings_dialog_title">Settings</string>
    <string name="settings_dialog_message">Please set up your settings:</string>
    <string name="text_goal_learn_time">What is your goal for learning [hours]:</string>
    <string name="text_reminder_time">How often do you want to remind you about pause [minutes]:</string>
    <string name="notification_title">It is time for a pause</string>
    <string name="notification_text">Tap to open application</string>


</resources>
