<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.pwiktorek.learntime.MainActivity">
    <item android:title="@string/clear_item_title" android:orderInCategory="100"
          android:id="@+id/action_clear" app:showAsAction="ifRoom"
          android:icon="@drawable/ic_clear"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="101"
          app:showAsAction="never|ifRoom" android:icon="@drawable/ic_settings"/>
    <item android:title="@string/about_item_title" android:orderInCategory="103" android:id="@+id/action_info"
          android:icon="@drawable/ic_info" app:showAsAction="ifRoom"/>
</menu>
