<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_start"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_start"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/tv_statistics"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/progressBar"/>
    <TextView
            android:text="@string/tv_statistics_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_statistics" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_timer"
            android:textStyle="bold" android:textSize="24sp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_statistics"
            app:layout_constraintStart_toStartOf="@+id/tv_statistics"
            app:layout_constraintEnd_toEndOf="@+id/tv_statistics" android:text="00:00:00"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_timer" android:indeterminate="false"
            android:progress="1"/>
    <TextView
            android:text="@string/tv_intervals_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvIntervals" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textSize="24sp"/>
    <ScrollView
            android:layout_width="368dp"
            android:layout_height="341dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/tvIntervals"
            android:id="@+id/scrollView2">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_intervals_list"
                tools:text="List of intervals"
                android:textSize="20sp"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/tvIntervals" android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:maxLines="100"
                android:scrollbars="vertical"
                android:gravity="bottom"
                android:text="@string/text_no_intervals"/>


    </ScrollView>

</android.support.constraint.ConstraintLayout>